Add trash support
